--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -17,14 +17,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@rainbow-me/rainbowkit": "2.2.9",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@scaffold-ui/components": "^0.1.8",
     "@scaffold-ui/debug-contracts": "^0.1.7",
     "@scaffold-ui/hooks": "^0.1.6",
     "@tanstack/react-query": "^5.59.15",
+    "@vercel/analytics": "^1.6.1",
     "blo": "^1.2.0",
     "burner-connector": "0.0.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.9",
     "kubo-rpc-client": "^5.0.2",
     "next": "^15.2.8",
@@ -34,6 +38,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hot-toast": "^2.4.0",
+    "recharts": "^3.7.0",
+    "tailwind-merge": "^3.5.0",
     "usehooks-ts": "^3.1.0",
     "viem": "2.39.0",
     "wagmi": "2.19.5",
