--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,9 +5,12 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.3.1",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "openai": "^6.22.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
